# mangobar

./: Cargo.toml  Makefile  PATCHING.md  README.md  package-lock.json
protocols/: dwl-ipc-unstable-v2.xml
src/: clock.rs  layout.rs  main.rs  mango_ipc.rs  settings.rs  status.rs  tags.rs  volume.rs
